tests/error/misc_errors/callable_not_list2.py
from typing import Callable

from guppylang.decorator import guppy


@guppy.declare
def foo(f: "Callable[None]") -> None: ...


foo.compile()
